<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>cepheus_gazebo</name>
  <version>0.0.0</version>
  <description>The cepheus_gazebo package</description>
  <maintainer email="peleioannis@gmail.com">Ioannis Pelekoudas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>urdf</exec_depend>
  <export>
    
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
