<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>phase_space</name>
  <version>0.0.0</version>
  <description>The phase_space package</description>
  <maintainer email="cjrosales@gmail.com">Carlos Rosales</maintainer>
  <license>TODO</license>
  <buildtool_depend>cmake_modules</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    
    

    

  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
